ACAD-1614 Edit Gradle to create and start the Docker container. Limit memory to 1GB.